[build-system]
requires=['setuptools>=68','wheel']
build-backend='setuptools.build_meta'

[project]
name='rl_bench_pro'
version='0.1.0'
description='Professional RL benchmarking suite (Gymnasium + SB3)'
readme='README.md'
requires-python='>=3.10'
authors=[{name='Dhamodar Burla', email='burladhamodar@gmail.com'}]
dependencies=['numpy>=1.24','pandas>=2.1','matplotlib>=3.7','gymnasium>=0.29','stable-baselines3>=2.3.0','opencv-python>=4.8']
[project.optional-dependencies]
dev=['pytest>=8','flake8','black','isort','pre-commit']
[tool.setuptools.packages.find]
where=['src']
